Fix tippy in dev mode, apply prettier

--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,6 @@
 @tailwind utilities;
 
 body {
-    font-family: 'IBM Plex Sans', source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: "IBM Plex Sans", source-code-pro, Menlo, Monaco, Consolas,
+    "Courier New", monospace;
 }
-
-
