add visualizations in product detail

--- a/src/styles/product-card.css
+++ b/src/styles/product-card.css
@@ -2,7 +2,7 @@
   font-size: 12px;
 }
 
-.product-card-question-container [data-testid="scalar-value"] {
+.product-card-question-container h1 {
   font-size: 20px;  
 }
 
