--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,4 +8,6 @@
 body {
   font-family: "IBM Plex Sans", source-code-pro, Menlo, Monaco, Consolas,
     "Courier New", monospace;
+
+  background: #4C5773;
 }
