--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,7 +9,7 @@ body {
   font-family: "IBM Plex Sans", source-code-pro, Menlo, Monaco, Consolas,
     "Courier New", monospace;
 
-  background: #4C5773;
+  background: #4c5773;
 }
 
 #metabase-sdk-root {
