--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,9 +6,7 @@
 @tailwind utilities;
 
 body {
-  font-family: "IBM Plex Sans", source-code-pro, Menlo, Monaco, Consolas,
-    "Courier New", monospace;
-
+  font-family: "Lato", sans-serif;
   background: #4c5773;
 }
 
