--- a/src/routes/product-detail/product-detail.css
+++ b/src/routes/product-detail/product-detail.css
@@ -7,6 +7,7 @@
   padding: 0;
 }
 
+/** TODO: replace this with theming API */
 .pd-question-container [data-testid="qb-filters-panel"] {
   display: none;
 }
