--- a/src/routes/product-detail/product-detail.css
+++ b/src/routes/product-detail/product-detail.css
@@ -1,7 +1,7 @@
 /** TODO: replace this with theming API */
-.pd-question-container [data-testid="qb-filters-panel"] {
+/* .pd-question-container [data-testid="qb-filters-panel"] {
   display: none;
-}
+} */
 
 .pd-trend-question-container {
   font-size: 12px;
