add static dashboard to demo app

--- a/src/routes/product-list/product-list.css
+++ b/src/routes/product-list/product-list.css
@@ -1,4 +1,4 @@
-.product-card-question-container {
+/* .product-card-question-container {
   font-size: 12px;
 }
 
@@ -8,4 +8,4 @@
 
 .product-card-question-container h4 {
   color: white;
-}
+} */
