--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,7 +6,7 @@
 @tailwind utilities;
 
 body {
-  font-family: "Lato", sans-serif;
+  font-family: "Roboto Slab", sans-serif;
   background: #212121;
 }
 
