--- a/src/routes/product-list/product-card.css
+++ b/src/routes/product-list/product-card.css
@@ -1,5 +1,5 @@
 /** WORKAROUND. To be removed after fine-grained theming is available. */
-[data-testid="scalar-value"] {
+.product-card-question [data-testid="scalar-value"] {
   font-weight: 200;
   text-align: left;
 
@@ -7,18 +7,18 @@
   margin-left: -2px;
 }
 
-[data-testid="scalar-period"] {
+.product-card-question [data-testid="scalar-period"] {
   display: none !important;
 }
 
-[data-card-key]>div:has(div[data-testid="scalar-container"]) {
+.product-card-question [data-card-key]>div:has(div[data-testid="scalar-container"]) {
   align-items: flex-start;
 }
 
-[data-testid="scalar-previous-value"] > div > h4 {
+.product-card-question [data-testid="scalar-previous-value"] > div > h4 {
   font-weight: 400;
 }
 
-[data-testid="scalar-previous-value"] > div > div > div {
+.product-card-question [data-testid="scalar-previous-value"] > div > div > div {
   font-weight: 400;
 }
