--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,7 +7,7 @@
 
 body {
   font-family: "Barlow", sans-serif;
-  background: #212121;
+  background: #212121 !important;
 }
 
 #metabase-sdk-root {
