--- a/src/themes/variables.css
+++ b/src/themes/variables.css
@@ -4,7 +4,7 @@ body[data-theme="dark"] {
   --color-lighter-grey: #E3E7E4;
   --color-light-grey: #C4C9C7;
   --color-dark-grey: #3B3F3F;
-  --color-background: #222222;
+  --color-background: #151C20;
 }
 
 body[data-theme="light"] {
@@ -13,7 +13,7 @@ body[data-theme="light"] {
   --color-lighter-grey: #E3E7E4;
   --color-light-grey: #C4C9C7;
   --color-dark-grey: #3B3F3F;
-  --color-background: #222222;
+  --color-background: #F6F5F1;
 }
 
 body[data-theme="blue"] {
@@ -22,5 +22,5 @@ body[data-theme="blue"] {
   --color-lighter-grey: #E3E7E4;
   --color-light-grey: #C4C9C7;
   --color-dark-grey: #3B3F3F;
-  --color-background: #222222;
+  --color-background: #FFFCEE;
 }
