make cards themeable

--- a/src/themes/variables.css
+++ b/src/themes/variables.css
@@ -9,7 +9,7 @@ body[data-theme="dark"] {
 
 body[data-theme="light"] {
   --font-family-sans: Barlow;
-  --color-primary: #DF75E9;
+  --color-primary: #E09862;
   --color-lighter-grey: #E3E7E4;
   --color-light-grey: #C4C9C7;
   --color-dark-grey: #3B3F3F;
@@ -18,7 +18,7 @@ body[data-theme="light"] {
 
 body[data-theme="blue"] {
   --font-family-sans: Barlow;
-  --color-primary: #DF75E9;
+  --color-primary: #3F4BF3;
   --color-lighter-grey: #E3E7E4;
   --color-light-grey: #C4C9C7;
   --color-dark-grey: #3B3F3F;
