--- a/src/themes/variables.css
+++ b/src/themes/variables.css
@@ -1,5 +1,5 @@
 body[data-theme="dark"] {
-  --font-family-sans: Barlow;
+  --font-family-sans: Inter;
   --color-primary: #DF75E9;
   --color-lighter-grey: #E3E7E4;
   --color-light-grey: #C4C9C7;
