--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -33,7 +33,7 @@ body[data-theme="dark"] {
     width: calc(100% - 4px);
     height: calc(100% - 4px);
     border-radius: var(--mantine-radius-sm);
-    background: #292B2D;
+    background: var(--color-background);
     z-index: 2;
   }
 
