light theme tweaks

--- a/src/styles/smartscalar-workaround.css
+++ b/src/styles/smartscalar-workaround.css
@@ -12,6 +12,17 @@ body:not([data-theme="dark"]) .smartscalar [data-testid="scalar-value"] {
   margin-left: -2px;
 }
 
+body[data-theme="light"] .smartscalar [data-testid="scalar-value"] {
+  font-family: "Libre Caslon Display";
+}
+
+body:not([data-theme="dark"]) .smartscalar [data-testid="scalar-value"] {
+  font-weight: 200;
+  
+  /** Force alignment. */
+  margin-left: -2px;
+}
+
 .smartscalar [data-testid="scalar-period"] {
   display: none !important;
 }
@@ -21,12 +32,17 @@ body:not([data-theme="light"]) .smartscalar [data-card-key]>div:has(div[data-tes
 }
 
 .smartscalar [data-testid="scalar-previous-value"] > div > h4 {
-  color: #ADABA9;
   font-weight: 400;
 }
 
-.smartscalar [data-testid="scalar-previous-value"] > div > h4 > span {
-  color: #ADABA9;
+body[data-theme="dark"] {
+  .smartscalar [data-testid="scalar-previous-value"] > div > h4 {
+    color: #ADABA9;
+  }
+
+  .smartscalar [data-testid="scalar-previous-value"] > div > h4 > span {
+    color: #ADABA9;
+  }
 }
 
 .smartscalar [data-testid="scalar-previous-value"] > div > div > div {
