--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -1,17 +1,34 @@
-/* body[data-theme="dark"] .card {
-  @apply text-white border border-dark-grey rounded-md;
+body[data-theme="dark"] .card {
+  @apply text-white border border-dark-grey rounded-lg;
 
   background: linear-gradient(105deg, #212426 0%, #303436 100%);
-} */
-
-body[data-theme="light"] .card {
-  @apply bg-background text-[#323E35] rounded-md;
-
-  box-shadow: 0px 2px 16px 0px #0000001A;
 }
 
-body[data-theme="blue"] .card {
-  @apply bg-background text-[#323E35] border border-dark-grey rounded-md;
+body[data-theme="light"] {
+  .divider {
+    --divider-color: #A8ACA5;
+  }
+
+  .card, .product-card {
+    color: var(--color-dark-grey);
+    border-radius: 16px;
+    box-shadow: 0px 2px 16px 0px #0000001A;
+    background-color: var(--color-background);
+  }
+
+  .product-card-image {
+    border-radius: 16px 16px 0px 0px;
+  }
+}
+
+body[data-theme="blue"] {
+  .card {
+    @apply bg-background text-[#323E35] border border-dark-grey rounded-md;
+  }
+
+  .product-card-image {
+    border-radius: 100%;
+  }
 }
 
 body[data-theme="dark"] {
@@ -49,4 +66,26 @@ body[data-theme="dark"] .dark-gradient {
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+
+body[data-theme="light"] .product-card-title {
+  font-weight: 700;
+  font-style: italic;
+  font-size: 16px;
+  text-align: center;
+}
+
+body[data-theme="blue"] .navbar {
+  color: white;
+  background: var(--color-primary);
+}
+
+body:not([data-theme="blue"]) {
+  .navbar {
+    background: transparent;
+  }
+
+  .sidebar-root {
+    font-weight: 600;
+  }
 }
