--- a/src/styles/smartscalar-workaround.css
+++ b/src/styles/smartscalar-workaround.css
@@ -42,4 +42,13 @@ body[data-theme="pug"] {
   .smartscalar [data-testid="scalar-value"] {
     margin-bottom: 20px;
   }
+
+  .smartscalar [data-testid="scalar-previous-value"],
+  .smartscalar [data-testid="scalar-previous-value"] > div > h4 {
+    font-size: 12px;
+
+    span {
+      font-size: inherit;
+    }
+  }
 }
