--- a/src/themes/stitch.css
+++ b/src/themes/stitch.css
@@ -1,6 +1,10 @@
 body[data-theme="stitch"] {
   .overview-title {
-    font-weight: 300;
+    font-weight: 400;
+  }
+
+  .sidebar-icons {
+    color: var(--color-primary);
   }
 
   .dark-gradient {
