--- a/src/themes/luminara.css
+++ b/src/themes/luminara.css
@@ -75,4 +75,8 @@ body[data-theme="luminara"] {
     font-weight: 700;
     font-style: italic;
   }
+
+  .product-detail-card-container {
+    margin-top: 16px;
+  }
 }
