--- a/src/themes/pug.css
+++ b/src/themes/pug.css
@@ -14,7 +14,7 @@ body[data-theme="pug"] {
     max-width: 300px;
   }
 
-  .sidebar-active-child:hover {
+  .sidebar-inactive-child:hover {
     color: var(--color-lighter-grey);
   }
 
