update wave smoothing and bump to v0.1.22

--- a/src/themes/pug.css
+++ b/src/themes/pug.css
@@ -29,9 +29,10 @@ body[data-theme="pug"] {
     content: " ";
     background: url(/blue-sidebar-waves.svg);
     background-repeat: repeat-y;
+    background-position: center;
     height: 100%;
-    width: 20px;
-    right: -12px;
+    width: 23px;
+    right: -11px;
   }
 
   .sidebar-inactive-child {
