full width product image on mobile

--- a/src/themes/luminara.css
+++ b/src/themes/luminara.css
@@ -72,7 +72,10 @@ body[data-theme="luminara"] {
 
   .product-detail-image {
     border-radius: 16px;
-    max-width: 300px;
+
+    @media screen and (min-width: 576px) {
+      max-width: 300px;
+    }
   }
 
   .product-detail-card-title {
