--- a/src/styles/smartscalar-workaround.css
+++ b/src/styles/smartscalar-workaround.css
@@ -49,10 +49,10 @@ body[data-theme="stitch"] {
 body[data-theme="pug"] {
   .smartscalar:not(.product-card-trend) [data-card-key]>div:has(div[data-testid="scalar-container"]) {
     align-items: flex-start;
-    padding-left: 16px;
+    padding-left: 16px !important;
 
     @media screen and (max-width: 576px) {
-      padding-left: 24px;
+      padding-left: 24px !important;
     }
 
     div[data-testid="scalar-title"] {
