--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -30,6 +30,13 @@ body:not([data-theme="luminara"]) {
   }
 }
 
+/** constrain product image width on non-mobile screens */
+.product-detail-image {
+  @media screen and (min-width: 576px) {
+    max-width: 300px;
+  }
+}
+
 /** hide elements on mobile using Mantine's breakpoint */
 .hide-on-mobile {
   @media (max-width: 768px) {
