also prevent applying to png exports

--- a/src/styles/dashboard-workaround.css
+++ b/src/styles/dashboard-workaround.css
@@ -24,8 +24,11 @@ body[data-theme="stitch"] {
     padding: 0 10px;
   }
 
-  /** WORKAROUND: only apply the css overrides when we are not exporting to pdf */
-  .smartscalar:not(.product-card-trend) #Dashboard-Parameters-And-Cards-Container:not(.saving-dom-image) [data-testid="scalar-container"] h1 {
+  /** WORKAROUND: only apply the css overrides when we are not exporting to pdf and png */
+  .smartscalar:not(.product-card-trend)
+    #Dashboard-Parameters-And-Cards-Container:not(.saving-dom-image)
+    [data-dashcard-key]:not(.saving-dom-image)
+    [data-testid="scalar-container"] h1 {
     font-size: 30px;
     font-weight: 500;
     background: linear-gradient(93.53deg, #E590ED 9.53%, #828ED9 39.15%, #79C1FD 65.02%, #B1DBF8 84.51%);
