--- a/src/themes/variables.css
+++ b/src/themes/variables.css
@@ -23,4 +23,5 @@ body[data-theme="pug"] {
   --color-light-grey: #545455;
   --color-dark-grey: #1B1C21;
   --color-background: #FFFCEE;
+  --color-bright-grey: #E2E4FD;
 }
